@@ -213,6 +213,7 @@ float protBranchScalingFactor = 1.0;
 // set branch lengths
 float defaultBranchLength = 0.1; // used if nothing else provided
 float fixedBranchLength = -1;
+float mergeBranchLength = -1;
 bool FIXEDBRANCH = false;
 bool MAXBRANCH = false;
 
