@@ -1,5 +1,6 @@
 v.120814
 - Can now also merge "alignments" of one sequence
+- New option '-mergedist=#' to define the distance for two alignments
 
 
 v.120717
